# NetworkManager-f5vpn

./: .clang-format  CMakeLists.txt  README
auth-dialog/: auth-dialog.h  browser-auth.c  main.c  native-auth.c  nm-f5vpn-auth-dialog.c  nm-f5vpn-xdg-helper.desktop  nm-f5vpn-xdg-helper.desktop.in  xdg-helper.c
cli/: main.c
conf/: nm-f5vpn-service.conf  nm-f5vpn-service.name.in
include/: f5vpn_auth.h  f5vpn_connect.h  f5vpn_getsid.h  pppd-plugin-message.h
lib/: f5vpn_auth.c  f5vpn_connect.c  f5vpn_getsid.c  glib_curl.c  glib_curl.h
plugin/: nm-f5vpn-editor.c  nm-f5vpn-editor.h  nm-vpn-plugin-f5.c
pppd/: pppd-f5-vpn.c
service/: nm-f5vpn-service.c  nm-f5vpn-service.name
